# leoAtFit

./: LICENSE-CC.md  LICENSE-MIT.md  README.md
1. semestr/IDM/: README.md
1. semestr/IDM/Domácí úkol/: du.tex
1. semestr/IEL/: README.md
1. semestr/IEL/Projekt/: 00-projekt.tex  01-pr1.tex  02-pr2.tex  03-pr3.tex  04-pr4.tex  05-pr5.tex  06-tab.tex  fitiel.cls
1. semestr/ILG/: README.md
1. semestr/ILG/Determinanty – důkaz/: dok.tex
1. semestr/ILG/Domácí úkol/: du.tex
1. semestr/ILG/GaussSeidel/: Program.cs
1. semestr/IUS/: README.md
1. semestr/IUS/Projekt – model IS – Kavárenský povaleč/: ER diagram fixed.drawio  ER diagram původní.drawio  ER diagram.drawio
1. semestr/IZP/: README.md
2. semestr/AIT/: README.md
2. semestr/IMA1/: README.md
2. semestr/INC/: README.md
2. semestr/IOS/: README.md
2. semestr/ISU/: README.md  Sčítání pro začátečníky.pptx
2. semestr/IZG/: README.md
3. semestr/IAL/: README.md
3. semestr/IFJ/: README.md
3. semestr/IMA2/: README.md
3. semestr/INP/: README.md
3. semestr/IPT/: README.md
3. semestr/ISS/: README.md
4. semestr/ICP/: README.md
4. semestr/ICP/Projekt/: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.txt
4. semestr/ICP/Projekt/assets/: icons.qrc
4. semestr/ICP/Projekt/examples/: simulator_config
4. semestr/ICP/Projekt/src/: dashboard.cpp  dashboard.h  dashboard.ui  explorer.cpp  explorer.h  explorer.ui  icp.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  message.cpp  message.h  simulator.cpp  simulator.h  simulator.ui
4. semestr/ICP/Projekt/src/dashboard_components/: dashboard_add_topic.cpp  dashboard_add_topic.h  dashboard_add_topic.ui  dashboard_connect.cpp  dashboard_connect.h  dashboard_connect.ui  flow_layout.cpp  flow_layout.h  mqtt_client.cpp  mqtt_client.h  widget_manager.cpp  widget_manager.h  widget_type.h
4. semestr/ICP/Projekt/src/dashboard_components/widgets/: mqtt_widget_base.cpp  mqtt_widget_base.h  switch_mqtt_widget.cpp  switch_mqtt_widget.h  temp_mqtt_widget.cpp  temp_mqtt_widget.h  temp_raw_mqtt_widget.cpp  temp_raw_mqtt_widget.h  text_mqtt_widget.cpp  text_mqtt_widget.h
4. semestr/ICP/Projekt/src/explorer_components/: messagebutton.cpp  messagebutton.h  mqtt_tree_model.cpp  mqtt_tree_model.h  rundialog.cpp  rundialog.h  rundialog.ui  sendmessage.cpp  sendmessage.h  sendmessage.ui  topicdialog.cpp  topicdialog.h  topicdialog.ui
4. semestr/ICP/Projekt/src/simulator_components/: mqtt_widget.cpp  mqtt_widget.h  mqtt_worker.cpp  mqtt_worker.h
4. semestr/IDS/: Poznámky.docx  README.md
4. semestr/IPK/: Poznámky.docx  README.md
4. semestr/IPP/: Poznámky.docx  Přehled obsahu prezentací (před půlsemestrálkou).docx  README.md
4. semestr/IZU/: Prolog – poznámky.txt  README.md
5. semestr/IIS/: README.md
5. semestr/IMP/: README.md
5. semestr/IMS/: README.md  ims_combined_2  ims_combined_alg  ims_combined_alg_condensed
5. semestr/ISA/: README.md
5. semestr/ITU/: README.md
Volitelné/IAM/: README.md  SMT solver – 8 queens problem.smt
Volitelné/IJC/: README.md
Volitelné/IPA/: Ke zkoušce.md  README.md
Volitelné/ITY/: README.md
Volitelné/IVS/: README.md
(+225 files in other folders)
